retirando uno de los index y la opcion de score

--- a/ciclo3/src/main/resources/static/reservationInterface.html
+++ b/ciclo3/src/main/resources/static/reservationInterface.html
@@ -12,7 +12,7 @@
         <h2>Registro de Reservaciones</h2>
 
         <fieldset style="width: 40%">
-            <legend>Datos de Reservación</legend>
+            <legend>Datos de Reservaciones</legend>
             <table>
                 <tr>
                     <th>Start Date:</th>
