cambio en la ñ y tilde en reservaciones

--- a/ciclo3/src/main/resources/static/reservationInterface.html
+++ b/ciclo3/src/main/resources/static/reservationInterface.html
@@ -17,7 +17,7 @@
                 <tr>
                     <th>Start Date:</th>
                     <td><input type="number" id="year"></td>
-                    <td>Año</td>
+                    <td>A&ntildeo</td>
                     <td><input type="number" id="month"></td>
                     <td>Mes</td>
                     <td><input type="number" id="day"></td>
@@ -26,7 +26,7 @@
                 <tr>
                     <th>Devolution Date:</th>
                     <td><input type="number" id="yearD"></td>
-                    <td>Año</td>
+                    <td>A&ntildeo</td>
                     <td><input type="number" id="monthD"></td>
                     <td>Mes</td>
                     <td><input type="number" id="dayD"></td>
@@ -66,7 +66,7 @@
         <h2>Registro de Calificaciones</h2>
 
         <fieldset style="width: 40%">
-            <legend>Datos de Calificación</legend>
+            <legend>Datos de Calificaciones</legend>
             <table>
                 <tr>
                     <th>Score</th>
